corrected alignment of middle card

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -157,6 +157,10 @@ body {
 
         h2 {
           margin-top: 8px;
+
+          @media only screen and(max-width: 600px) {
+            margin-top: 0;
+          }
         }
       }
       .mb-section {
